# mlsdr

./: README.md
fpga/: .gitignore  adc.v  adc_tb.v  build.sbt  clkdiv.v  clkdiv_tb.v  cmdparser.v  cmdparser_tb.v  common.v  edgetrigger.v  fifo8_short.qip  fifo8_short.v  fifo8_short_bb.v  ft232.v  ft232_fifo.qip  ft232_fifo.v  ft232_fifo_bb.v  ft232_fifo_short.qip  ft232_fifo_short.v  ft232_fifo_short_bb.v  ft232_tb.v  i2c.v  i2c_tb.v  mlsdr.qpf  packer_12to8.v  packer_12to8_tb.v  packeter.v  packeter_tb.v  pll.v  pll_bb.v  ppsin.v  ppsin_tb.v  pwm.v  register.v  register_tb.v  simulate.sh  sync.v  toplevel.qsf  toplevel.sdc  toplevel.v  (+1 more)
fpga/bsdl/: 10M08SCU169.bsd
fpga/src/main/scala/: ADCReader.scala  Config.scala  Main.scala  Packer12to8.scala  PatternSawtooth.scala  Register.scala  Registers.scala  Tristate.scala
fpga/src/test/scala/: ADCReaderTests.scala  Packer12to8.scala  PatternSawtoothTests.scala
lib/: CMakeLists.txt  iqconv.c  iqconv.h  mlsdr.c  mlsdr.h  mlsdr_list.c  mlsdr_sdr.c  mlsdr_test.c  r820t.c  r820t.h  regmap.c  regmap.h  ring.c  utils.c  utils.h
lib/cmake/: cmake_uninstall.cmake  mlsdr-config.cmake
pcb/: adc.sch  analog_psu.bak  fpga.bak  fpga.sch  fpga_misc.bak  ftdi.bak  ftdi.sch  mlaticka-sdr.bak  mlaticka-sdr.html  mlaticka-sdr.kicad_pcb  mlaticka-sdr.kicad_pcb-bak  mlaticka-sdr.net  mlaticka-sdr.pro  mlaticka-sdr.sch  mlaticka-sdr.step  mlaticka-sdr.xml  mlaticka_sdr.FCStd  notes.txt  rf.bak  rf.sch
pcb/footprints.pretty/: ABRACON-ASFL1.kicad_mod  DSC-3.2x2.5mm.kicad_mod  QFN-48-1EP_8x8mm_Pitch0.5mm.kicad_mod  SFV10R.kicad_mod  UBGA-169.kicad_mod  VFLGA-4Pin-2.5x2.0.kicad_mod  Via.kicad_mod  WS2812.kicad_mod  WSON-6-DRV.kicad_mod  label_jtag.kicad_mod  label_name.kicad_mod  label_plus.kicad_mod  label_pps.kicad_mod  label_rf.kicad_mod  label_rx.kicad_mod  label_tab.kicad_mod  label_version.kicad_mod  mlaticka-sdr.net
pcb/plot.pragoboard/: _autosave-panel.kicad_pcb  bot.gbr  in2.gbr  in3.gbr  mill.gbr  panel.kicad_pcb  panel.kicad_pcb-bak  plt.gbr  pth.exc  smb.gbr  smt.gbr  top.gbr
pcb/plot.pragoboard.old/: in2.gbr  plt.gbr  smt.gbr  top.gbr
soapy/: CMakeLists.txt  Registration.cpp  Settings.cpp  SoapyMLSDR.hpp  Streaming.cpp
utils/: altera.py  makelabel.sh
